--- a/.github/workflows/nginx.yaml
+++ b/.github/workflows/nginx.yaml
@@ -13,10 +13,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - run: echo ${{ secrets.REGISTRY_TOKEN }} | docker login ghcr.io -u USERNAME --password-stdin
-    - run: docker build . --file ./web/Dockerfile --build-arg REACT_APP_VERSION=$GITHUB_SHA --tag "ghcr.io/gessfred/nginx/<app>:$GITHUB_SHA"
-    - run: docker push "ghcr.io/gessfred/nginx/<app>:$GITHUB_SHA"
-    - run: docker build . --file ./web/Dockerfile --build-arg REACT_APP_VERSION=$GITHUB_SHA --tag "ghcr.io/gessfred/nginx/<app>:latest"
-    - run: docker push "ghcr.io/gessfred/nginx/<app>:latest"
+    - run: docker build . --file ./web/Dockerfile --build-arg REACT_APP_VERSION=$GITHUB_SHA --tag "ghcr.io/gessfred/nginx/player-of-the-day:$GITHUB_SHA"
+    - run: docker push "ghcr.io/gessfred/nginx/player-of-the-day:$GITHUB_SHA"
+    - run: docker build . --file ./web/Dockerfile --build-arg REACT_APP_VERSION=$GITHUB_SHA --tag "ghcr.io/gessfred/nginx/player-of-the-day:latest"
+    - run: docker push "ghcr.io/gessfred/nginx/player-of-the-day:latest"
   
   deploy:
     needs: build
